Ports AMBARI-26233: Fix ambari-env.sh after jdk upgrade