@@ -13,15 +13,32 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+# Exit immediately if a command exits with a non-zero status
 
-
+set -e
+# Set Ambari passphrase
 AMBARI_PASSHPHRASE="DEV"
-export AMBARI_JVM_ARGS="$AMBARI_JVM_ARGS -Xms512m -Xmx2048m -Djdk.tls.ephemeralDHKeySize=2048 -Djava.security.auth.login.config=$ROOT/etc/ambari-server/conf/krb5JAASLogin.conf -Djava.security.krb5.conf=/etc/krb5.conf -Djavax.security.auth.useSubjectCredsOnly=false -Dcom.sun.jndi.ldap.connect.pool.protocol=\"plain ssl\" -Dcom.sun.jndi.ldap.connect.pool.maxsize=20 -Dcom.sun.jndi.ldap.connect.pool.timeout=300000"
-export PATH=$PATH:$ROOT/var/lib/ambari-server
-export PYTHONPATH=$ROOT/usr/lib/ambari-server/lib:$PYTHONPATH
 
-# customize python binary for ambari
-# export PYTHON=/usr/bin/python3
+# Set JVM arguments for Ambari
+AMBARI_JVM_ARGS="--add-opens java.base/java.lang=ALL-UNNAMED "
+AMBARI_JVM_ARGS+="--add-opens java.base/java.util.regex=ALL-UNNAMED "
+AMBARI_JVM_ARGS+="--add-opens java.base/java.util=ALL-UNNAMED "
+AMBARI_JVM_ARGS+="--add-opens java.base/java.lang.reflect=ALL-UNNAMED "
+AMBARI_JVM_ARGS+="-Xms512m -Xmx2048m "
+AMBARI_JVM_ARGS+="-Djava.security.auth.login.config=$ROOT/etc/ambari-server/conf/krb5JAASLogin.conf "
+AMBARI_JVM_ARGS+="-Djava.security.krb5.conf=/etc/krb5.conf "
+AMBARI_JVM_ARGS+="-Djavax.security.auth.useSubjectCredsOnly=false "
+AMBARI_JVM_ARGS+="-Dcom.sun.jndi.ldap.connect.pool.protocol=\"plain ssl\" "
+AMBARI_JVM_ARGS+="-Dcom.sun.jndi.ldap.connect.pool.maxsize=20 "
+AMBARI_JVM_ARGS+="-Dcom.sun.jndi.ldap.connect.pool.timeout=300000"
+export AMBARI_JVM_ARGS
 
-# to add additional directory or jar to server classpath use SERVER_CLASSPATH variable
+# Update PATH to include Ambari server directory
+export PATH="$PATH:$ROOT/var/lib/ambari-server"
+
+# Set Python path for Ambari server
+export PYTHONPATH="/usr/lib/ambari-server/lib:$PYTHONPATH"
+
+# Additional server classpath can be set using SERVER_CLASSPATH
+# Uncomment the following line to add additional directories or jars
 # export SERVER_CLASSPATH=/etc/hadoop/conf/secure
